# tokenoverflow

./: .act.secrets.example  .actrc  .editorconfig  .gitattributes  .gitignore  .lighthouserc.json  .lychee.toml  .markdownlint.json  .oxlintrc.json  .pre-commit-config.yaml  .stylelintignore  .stylelintrc.json  AGENTS.md  Brewfile  Cargo.toml  CargoLambda.toml  LICENSE  README.md  bunfig.toml  docker-compose.yml  opencode.jsonc  package.json  skills-lock.json  trivy.yaml  tui.json  turbo.json
.cargo/: config.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/agents/: code-reviewer.md  design-lead.md  design-reviewer.md  engineer.md
.claude/hooks/: no_logic_in_mod_rs.sh  no_prek_all_files.sh  tdd.sh
.codex/: config.toml
.github/act/: event_pr.json  event_push_main.json
.github/workflows/: AGENTS.md  deploy_api.yml  deploy_landing.yml  terraform.yml
.opencode/agents/: code-reviewer.md  design-lead.md  engineer.md
apps/api/: Cargo.toml  Dockerfile  diesel.toml
apps/api/config/: development.toml  local.toml  production.toml  unit_test.toml
apps/api/migrations/20260131000000_init/: down.sql  up.sql
apps/api/src/: AGENTS.md  config.rs  constants.rs  error.rs  lib.rs  logging.rs  main.rs  migrate.rs
apps/api/src/api/: extractors.rs  middleware.rs  mod.rs  server.rs  state.rs
apps/api/src/api/routes/: answers.rs  configure.rs  health.rs  mod.rs  oauth_proxy.rs  questions.rs  search.rs  well_known.rs
apps/api/src/api/types/: answer.rs  mod.rs  question.rs
apps/api/src/db/: mod.rs  pool.rs  schema.rs
apps/api/src/db/models/: answer.rs  mod.rs  question.rs  user.rs  vote.rs
apps/api/src/mcp/: extractors.rs  mod.rs  server.rs
apps/api/src/mcp/tools/: downvote_answer.rs  elicitation.rs  error.rs  mod.rs  search_questions.rs  submit.rs  submit_answer.rs  upvote_answer.rs
apps/api/src/services/: answer.rs  auth.rs  mod.rs  question.rs  search.rs  tag_resolver.rs  tags.rs
apps/api/src/services/repository/: AGENTS.md  mod.rs
apps/api/src/services/repository/interface/: answer.rs  mod.rs  question.rs  search.rs  tag.rs  user.rs
apps/api/src/services/repository/postgres/: answer.rs  mod.rs  question.rs  search.rs  tag.rs  user.rs
apps/api/tests/assets/auth/: test_jwks.json  test_private_key.pem
apps/api/tests/common/: README.md  axum_helpers.rs  fixtures.rs  http_client.rs  mock_embedding.rs  mock_repository.rs  mod.rs  noop_conn.rs  test_jwt.rs
apps/api/tests/e2e/: README.md  mod.rs
apps/api/tests/e2e/api/routes/: mod.rs  test_answers.rs  test_health.rs  test_oauth_proxy.rs  test_questions.rs  test_search.rs
apps/api/tests/e2e/mcp/: helpers.rs  mod.rs  test_auth.rs  test_server.rs
apps/api/tests/e2e/mcp/tools/: mod.rs  test_downvote_answer.rs  test_search_questions.rs  test_submit.rs  test_submit_answer.rs  test_upvote_answer.rs
apps/api/tests/integration/: mod.rs  test_db.rs
apps/api/tests/integration/api/: mod.rs  test_auth_middleware.rs  test_graceful_shutdown.rs
apps/api/tests/integration/api/routes/: test_answers.rs  test_health.rs  test_oauth_proxy.rs  test_questions.rs  test_search.rs
apps/api/tests/integration/mcp/: helpers.rs  mod.rs
apps/api/tests/integration/mcp/tools/: mod.rs  test_downvote_answer.rs  test_search_questions.rs  test_submit.rs  test_submit_answer.rs  test_submit_approval.rs  test_upvote_answer.rs
apps/api/tests/integration/repositories/: mod.rs  test_answer_repo.rs  test_question_repo.rs  test_search_repo.rs  test_tag_repo.rs  test_user_repo.rs
apps/api/tests/integration/services/: mod.rs  test_auth.rs
apps/api/tests/unit/: README.md  mod.rs  test_config.rs  test_error.rs  test_jwt_generator.rs  test_logging.rs  test_migrate.rs
apps/api/tests/unit/api/: mod.rs  test_auth_middleware.rs  test_middleware.rs
apps/api/tests/unit/api/routes/: mod.rs  test_answers.rs  test_health.rs  test_oauth_proxy.rs  test_questions.rs  test_search.rs  test_well_known.rs
apps/api/tests/unit/api/types/: mod.rs  test_answer.rs  test_question.rs  test_search.rs
apps/api/tests/unit/mcp/: helpers.rs  mod.rs  test_elicitation.rs  test_server.rs
apps/api/tests/unit/services/: mod.rs  test_answer.rs  test_auth.rs  test_question.rs  test_search.rs  test_tag_resolver.rs  test_tags.rs
apps/embedding_service/: Cargo.toml  Dockerfile
apps/embedding_service/src/: embedder.rs  lib.rs  logging.rs  main.rs  model.rs  types.rs
apps/embedding_service/src/api/: mod.rs  server.rs  state.rs
apps/embedding_service/src/api/routes/: configure.rs  embeddings.rs  health.rs  mod.rs
apps/embedding_service/tests/integration/: fixtures.rs  mod.rs
apps/embedding_service/tests/integration/api/routes/: mod.rs  test_embeddings.rs  test_health.rs
apps/embedding_service/tests/unit/: mod.rs  test_logging.rs  test_model.rs
apps/embedding_service/tests/unit/api/: mod.rs  test_server.rs
apps/embedding_service/tests/unit/api/routes/: mod.rs  test_embeddings.rs  test_health.rs  test_model.rs
apps/landing/: AGENTS.md  Dockerfile  README.md  astro.config.ts  package.json  playwright.config.ts  static-web-server.toml  tsconfig.json  uno.config.ts  vitest.config.ts
apps/so_tag_sync/: Cargo.toml  README.md
apps/so_tag_sync/src/: api_client.rs  cli.rs  config.rs  db.rs  file_io.rs  lib.rs  main.rs  types.rs
apps/so_tag_sync/tests/integration/: mod.rs  test_db.rs  test_db_infra.rs
apps/so_tag_sync/tests/unit/: mod.rs  test_api_client.rs  test_cli.rs  test_config.rs  test_file_io.rs  test_types.rs
bruno/tokenoverflow/: workspace.yml
docs/brief/: 2026_01_31_tokenoverflow.md
docs/design/: 2026_04_01_mcp_tool_workflows.md  2026_04_04_submission_approval_flow.md
docs/prd/: 2026_04_01_mcp_tool_workflows.md
docs/templates/: brief.md  design.md  prd.md
infra/terraform/: .tflint.hcl  AGENTS.md  README.md
integrations/claude/: .mcp.json  instructions.md  tags.md
integrations/common/: instructions.md
scripts/src/: act.sh  claude.sh  dev_token.sh  docker.sh  docs.sh  includes.sh  mcp.sh  rds.sh  rds_ssh_tunnel.sh  rds_tunnel.sh  setup.sh  tf.sh  utils.sh
scripts/tests/: .shellcheckrc  test_act.sh  test_mcp.sh  (+6 more)
(+203 files in other folders)
