[workspace]
resolver = "2"
members = [
    "apps/api",
    "apps/embedding_service",
    "apps/so_tag_sync",
]

# Transitive dependency security fixes (enforced via Cargo.lock):
# quinn-proto >= 0.11.14 (Fixes: CVE-2026-31812)
# aws-lc-sys >= 0.39.0 (Fixes: GHSA-vw5v-4f2q-w9xf, GHSA-394x-vwmw-crm3, GHSA-65p9-r9h6-22vj, GHSA-hfpc-8r3f-gw53, GHSA-9f94-5g5w-gf6r)
# tar >= 0.4.45 (Fixes: CVE-2026-33056, CVE-2026-33055)
# rustls-webpki >= 0.103.10 (Fixes: GHSA-pwjx-qhcg-rvj4)

[profile.release]
opt-level = "s"
lto = "thin"
strip = "symbols"
panic = "abort"
codegen-units = 1
