[package]
name = "tokenoverflow"
version = "0.0.1"
edition = "2024"
rust-version = "1.93"

[dependencies]
# HTTP server framework - modular, tower-based, tokio-native
axum = { version = "0.8", features = ["macros"] }

# HTTP types and utilities
http = "1"

# Tower ecosystem for middleware
tower = { version = "0.5", features = ["timeout"] }
tower-http = { version = "0.6", features = ["trace", "set-header", "cors"] }

# Async runtime - required by axum and diesel-async
tokio = { version = "1", features = ["full"] }

# ORM and query builder - type-safe, compile-time checked
diesel = { version = "2.2", features = ["postgres", "chrono", "uuid"] }

# Embedded migrations — compiled into the binary for `--migrate` flag
diesel_migrations = "2.2"

# Async Diesel with bb8 connection pooling
diesel-async = { version = "0.5", features = ["postgres", "bb8"] }

# pgvector support for Diesel - vector types and distance functions
pgvector = { version = "0.4", features = ["diesel"] }

# Derive macros for JSON serialization - used for API request/response types
serde = { version = "1", features = ["derive"] }

# JSON serialization for ad-hoc responses
serde_json = "1"

# URL-encoded form serialization for OAuth proxy query strings
serde_urlencoded = "0.7"

# Layered configuration from TOML files
config = { version = "0.14", features = ["toml"] }

# Structured logging API - spans, fields, async-aware context propagation
tracing = "0.1"
# Log output implementation - JSON format for CloudWatch, env-based filtering
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client for Voyage AI embedding API
reqwest = { version = "0.13", features = ["json"] }

# Retry middleware for reqwest - exponential backoff on transient HTTP errors
reqwest-middleware = { version = "0.5", features = ["json"] }
reqwest-retry = "0.9"

# Error type definitions with derive macro
thiserror = "2"

# Async trait support - required for EmbeddingPort trait
async-trait = "0.1"

# Chrono for datetime handling in models
chrono = { version = "0.4", features = ["serde"] }

# Declarative validation for API request types
validator = { version = "0.19", features = ["derive"] }

# MCP (Model Context Protocol) server implementation
rmcp = { version = "1.3", features = ["server", "macros", "transport-streamable-http-server", "elicitation", "schemars"] }

# JSON Schema generation for MCP tool parameters
schemars = "1"

# String similarity for Jaro-Winkler fuzzy tag matching
strsim = "0.11"

# Lambda HTTP adapter — converts API Gateway events to http::Request
lambda_http = "0.14"

# UUID generation for trace IDs in local (non-Lambda) mode
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# JWT validation (RS256 signature verification, JWKS key parsing)
# Fixes: CVE-2026-25537
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }

# Static linking for Lambda (activated by `--features bundled-libs`).
# Compiles libpq and OpenSSL from C source so the binary is self-contained.
# Not used by Docker builds or local dev — those link to system libraries.
pq-sys = { version = "0.7", optional = true }
openssl-sys = { version = "0.9", optional = true }

[features]
bundled-libs = ["pq-sys/bundled", "openssl-sys/vendored"]

[dev-dependencies]
# Random number generation - for mock embedding adapter in tests
rand = "0.8"
# Run code before tests - auto-set TOKENOVERFLOW_ENV per test binary
ctor = "0.4"
# HTTP client for integration tests - test API endpoints
reqwest = { version = "0.13", features = ["json"] }
# JSON parsing for test assertions
serde_json = "1"
# Tokio test runtime for async tests
tokio-test = "0.4"
# Tokio utilities for cancellation tokens in tests
tokio-util = "0.7"
# MCP client for integration tests
rmcp = { version = "1.3", features = ["client", "transport-streamable-http-client-reqwest"] }
# Futures utilities for test helpers (dummy sink/stream)
futures = "0.3"
# Docker-based test containers for integration tests
# Pinned to 0.27.2+ (astral-tokio-tar >= 0.6.0 fixes CVE-2026-32766)
testcontainers = { version = "0.27.2", features = ["watchdog"] }
# JWT generation for test helpers (sign test JWTs with the test private key)
# Fixes: CVE-2026-25537
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
# Mock HTTP server for integration tests (JWKS fetch, WorkOS API)
wiremock = "0.6"

[lib]
name = "tokenoverflow"
path = "src/lib.rs"

[[bin]]
name = "tokenoverflow"
path = "src/main.rs"

[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"

[package.metadata.cargo-machete]
ignored = ["openssl-sys", "pq-sys"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
