[package]
name = "embedding_service"
version = "0.0.1"
edition = "2024"
rust-version = "1.93"

[dependencies]
# HTTP server framework - modular, tower-based, tokio-native
axum = { version = "0.8" }
# HTTP types and utilities
http = "1"
# Async runtime
tokio = { version = "1", features = ["full"] }
# JSON serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Fast local embeddings using ONNX
fastembed = "4"
# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# Tower ServiceExt for oneshot() in route tests
tower = { version = "0.5" }
# HTTP client for tests
reqwest = { version = "0.13", features = ["json"] }

[lib]
name = "embedding_service"
path = "src/lib.rs"

[[bin]]
name = "embedding_service"
path = "src/main.rs"

[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
